<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="TKN_ablum_not_found">无法找到相册！</string>
    <string name="TKN_copy_link_msg">链接已复制到剪贴板</string>
    <string name="TKN_copy_link_msg_failed">没有要复制的链接</string>
    <string name="TKN_copy_msg_failed">没有要复制的内容</string>
    <string name="TKN_copy_msg_success">已复制到剪贴板</string>
    <string name="TKN_intent_pick_source">选择一个来源</string>
    <string name="TKN_text_canle_btn">取消</string>
    <string name="TKN_text_copy_link">复制链接</string>
    <string name="TKN_text_findfriend_install_weichat">快快安装一个微信客户端吧，亲~</string>
    <string name="TKN_text_nosdcard">没有sd卡</string>
    <string name="TKN_text_social_qq">QQ好友</string>
    <string name="TKN_text_social_qzone">QQ空间</string>
    <string name="TKN_text_social_tencentqq">QQ</string>
    <string name="TKN_text_social_wechat">微信</string>
    <string name="TKN_text_social_wechat_friend">微信好友</string>
    <string name="TKN_text_social_wechat_friend2">微信朋友圈</string>
    <string name="TKN_text_social_wechat_friends">朋友圈</string>
    <string name="TKN_text_social_weibo">微博</string>
    <string name="TKN_text_social_weibo_fans">微博粉丝</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_delete">确认删除？</string>
    <string name="action_forward">转发</string>
    <string name="action_report">举报</string>
    <string name="action_save">保存</string>
    <string name="action_settings">Settings</string>
    <string name="antvr_paranomic">蚁视模式</string>
    <string name="app_name">花椒</string>
    <string name="app_name_topbar">花椒直播</string>
    <string name="auth_result_canceled">取消授权</string>
    <string name="auth_result_failed">授权失败</string>
    <string name="auth_result_success">授权成功</string>
    <string name="camera_photo">-相机照片</string>
    <string name="camera_snap">-360智能摄像机</string>
    <string name="change_mobile_fail_text">更换手机号失败，请重试</string>
    <string name="charge_pay_info">1元=10个花椒豆，花椒豆只能购买礼物，不可以直接提现</string>
    <string name="comment_share">拉朋友一起观看</string>
    <string name="complete_bind_text">完成绑定</string>
    <string name="complete_modify_vertify_text">提交审核</string>
    <string name="cover_camera_text">拍封面</string>
    <string name="cover_ready_living">即将开始直播</string>
    <string name="cover_title">拍一张好看的封面可以获得更多观众</string>
    <string name="current_rank">累计经验值： %1$s</string>
    <string name="default_live_share_title">上花椒，当明星！我正在花椒直播，快来围观！</string>
    <string name="download_apk_info">需要下载并安装视频插件，才能在线播放视频，确认安装吗？</string>
    <string name="download_apk_ok">确认</string>
    <string name="download_apk_title">请安装视频插件</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="feed_total_comment">所有%d条评论</string>
    <string name="focus_less_hint_detail">看看Ta们是谁？</string>
    <string name="focus_less_hint_title">小编怕您寂寞，派Ta们来陪您</string>
    <string name="focus_nolive_hint_detail">去发现更多直播吧~</string>
    <string name="focus_nolive_hint_title">您关注的小伙伴现在没有直播</string>
    <string name="focus_nonew_hint_detail">去看看其他小伙伴都干啥呢~</string>
    <string name="focus_nonew_hint_title">您关注的小伙伴可能都睡着了</string>
    <string name="focus_share_unsupport">该类型目前不支持分享</string>
    <string name="get_sms_code_text">获取验证码</string>
    <string name="goto_huajiao_text">进入花椒</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_square">广场</string>
    <string name="home_watch_living">同时观看</string>
    <string name="home_watch_replay">在线观看</string>
    <string name="im_pickimg_gallery">图库</string>
    <string name="image_upload_failed">图片发布失败</string>
    <string name="image_upload_success">已发布</string>
    <string name="image_uploading">正在发布图片</string>
    <string name="invite_friends_count_text">您已邀请%s位好友</string>
    <string name="invite_friends_get_redpacket_desc_text">"分享红包口令，邀请好友加入
邀请成功各奖红包一枚！"</string>
    <string name="invite_friends_get_redpacket_title_text">邀好友，报口令，得红包</string>
    <string name="invite_friends_inputcode_notexist_text">您输入的口令不存在，请重新输入</string>
    <string name="invite_friends_inputcode_nothing_answer_text">邀请新朋友加入花椒，不限量10倍红包等你拿</string>
    <string name="invite_friends_inputcode_nothing_question_text">没有口令别遗憾！</string>
    <string name="invite_friends_inputcode_title_text">新用户，报口令，得红包</string>
    <string name="invite_friends_inputcode_where_answer_text">花椒上的小伙伴都可以分享红包口令给您！</string>
    <string name="invite_friends_inputcode_where_question_text">口令去哪找？</string>
    <string name="invite_friends_redpacket_code_text">您的红包口令</string>
    <string name="kefu_modify_vertify_text">我们将在1个工作日内审核您的资料，请保持电话畅通，有可能接到客服小妹的电话哦~(*^__^*)</string>
    <string name="left_next_rank">离升级还差： %1$s</string>
    <string name="live_activity_string1">直播中上传本地超时</string>
    <string name="live_activity_string10">已通知当前所有观众，或许马上就有大量观众来围观了</string>
    <string name="live_activity_string11">截屏成功，图片已保存到相册中</string>
    <string name="live_activity_string12">网络中断，直播结束</string>
    <string name="live_activity_string13">确定</string>
    <string name="live_activity_string14">取消</string>
    <string name="live_activity_string15">评论不能为空</string>
    <string name="live_activity_string16">已直播</string>
    <string name="live_activity_string17">确定要结束直播吗？</string>
    <string name="live_activity_string18">位观众正在看您的直播</string>
    <string name="live_activity_string19">截屏</string>
    <string name="live_activity_string2">火星</string>
    <string name="live_activity_string20">求关注</string>
    <string name="live_activity_string21">结束直播</string>
    <string name="live_activity_string22">连接服务超时，视频已被终止</string>
    <string name="live_activity_string23">已被播主禁言</string>
    <string name="live_activity_string24">有人关注你了</string>
    <string name="live_activity_string25">关注了你</string>
    <string name="live_activity_string26">已禁止</string>
    <string name="live_activity_string27">发言</string>
    <string name="live_activity_string28">禁言失败，请重试</string>
    <string name="live_activity_string29">发送</string>
    <string name="live_activity_string3">直播数据有错误，请重试！</string>
    <string name="live_activity_string30">说点什么吧</string>
    <string name="live_activity_string31">"通知现场所有观众，邀请他们的朋友一起观看
可以为你的直播增加人气，点这里开始通知"</string>
    <string name="live_activity_string32">"您还没有给直播起标题，起个诱人的标
题可以获得更多的关注"</string>
    <string name="live_activity_string33">有这么多观众您要关闭直播吗？</string>
    <string name="live_activity_string34">继续直播</string>
    <string name="live_activity_string35">停止直播</string>
    <string name="live_activity_string36">直播马上开始了</string>
    <string name="live_activity_string37">请保持手机稳定，拍摄的画面即将给千万网友真实直播</string>
    <string name="live_activity_string38">请输入一个标题</string>
    <string name="live_activity_string39">给你的直播起个标题</string>
    <string name="live_activity_string4">暂时无法访问摄像头，请稍后重试</string>
    <string name="live_activity_string40">给直播起个诱人的标题吧</string>
    <string name="live_activity_string41">就用这个标题</string>
    <string name="live_activity_string42">还没有人观看哦</string>
    <string name="live_activity_string43">"人观看
"</string>
    <string name="live_activity_string45">个赞，</string>
    <string name="live_activity_string46">个关注</string>
    <string name="live_activity_string47">"你的直播被运营妹妹嫌弃了
是不是播放了什么不该播的画面"</string>
    <string name="live_activity_string48">知道了，我会注意的</string>
    <string name="live_activity_string49">请输入回复文字</string>
    <string name="live_activity_string5">确定退出吗？</string>
    <string name="live_activity_string50">说点什么吧...</string>
    <string name="live_activity_string51" />
    <string name="live_activity_string52" />
    <string name="live_activity_string53" />
    <string name="live_activity_string54" />
    <string name="live_activity_string55" />
    <string name="live_activity_string56" />
    <string name="live_activity_string6">直播中遇到错误，错误码：</string>
    <string name="live_activity_string7">开播失败</string>
    <string name="live_activity_string8">登录失败，请重试</string>
    <string name="live_activity_string9">刚刚已通知过大家了，大批观众可能正在赶来的路上，再等一会儿吧~</string>
    <string name="live_finish_share_auchor">分享给朋友才会涨粉哦</string>
    <string name="live_finish_share_watchers">分享给好友为播主助力</string>
    <string name="live_list_live_tip">一共有%d个直播</string>
    <string name="live_list_replay_tip">直播看完了，看看回放吧</string>
    <string name="login_fail_text">登录失败，请重试</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="message_who_comment_who_text">%1$s  评论了  你  的%2$s</string>
    <string name="message_who_follow_who_text">%1$s  关注了  %2$s</string>
    <string name="message_who_forward_who_text">%1$s  转发了  你  的%2$s</string>
    <string name="message_who_praise_who_text">%1$s  赞了  你  的%2$s</string>
    <string name="mobile_bind_fail_text">绑定失败</string>
    <string name="mobile_bind_ok_text">手机号绑定成功</string>
    <string name="mobile_num_empty_text">请输入手机号</string>
    <string name="mobile_num_pattern_error_text">手机号格式不正确</string>
    <string name="mobile_num_same_error_text">该手机号与当前绑定的手机号相同</string>
    <string name="modes">视频模式</string>
    <string name="modify_pwd_fail_text">密码修改失败，请重试</string>
    <string name="modify_pwd_ok_text">密码修改成功</string>
    <string name="modify_vertify_fail_text">修改认证信息失败，请重试</string>
    <string name="modify_vertify_ok_text">修改认证信息成功</string>
    <string name="more_topic">更多话题</string>
    <string name="network_disabled">网络不可用，请稍后重试</string>
    <string name="network_disabled_exit_retry">网络不可用，请返回重试</string>
    <string name="network_server_disable">服务器正忙，请稍候</string>
    <string name="next_time_use_new_acount_login_text">下次可以直接通过手机号和新密码登录</string>
    <string name="next_time_use_new_new_acount_login_text">下次可以直接通过新手机号和密码登录</string>
    <string name="no_focus_action">去看看感兴趣的人吧</string>
    <string name="no_focus_tips">当前还没有内容</string>
    <string name="normal">2D</string>
    <string name="normal_3d">左右3D</string>
    <string name="notice_video_record_failed">开始录像失败，请重新录像</string>
    <string name="notice_video_record_invalid">录像时间过短，录制失败</string>
    <string name="notice_video_record_invalid_with_net">网络较差，录制失败</string>
    <string name="notice_video_record_saved">录像已保存在我的相册</string>
    <string name="notice_video_snapshot_failed">截屏失败，请重新截屏</string>
    <string name="notice_video_snapshot_failed_for_share">分享失败，休息一下再试试~</string>
    <string name="share_title_copy">复制链接</string>
    <string name="share_title_forward">仅转发</string>
    <string name="share_title_qq">QQ好友</string>
    <string name="share_title_qzone">QQ空间</string>
    <string name="share_title_weibo">新浪微博</string>
    <string name="share_title_wx">微信好友</string>
    <string name="share_title_wxgroup">朋友圈</string>
</resources>