<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/share_menu_container" android:background="#01000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/share_content_layout" android:background="@color/color_black_alph_bg4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <View android:layout_width="fill_parent" android:layout_height="@dimen/live_share_menu_margin_bottom" />
        <LinearLayout android:orientation="horizontal" android:id="@id/social_share_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true">
            <TextView android:id="@id/btn_share_weibo" android:text="@string/share_title_weibo" android:drawableTop="@drawable/ic_pop_share_weibo_normal" style="@style/share_button_style" />
            <TextView android:id="@id/btn_share_wx" android:text="@string/share_title_wx" android:drawableTop="@drawable/ic_pop_share_wx_normal" style="@style/share_button_style" />
            <TextView android:id="@id/btn_share_wxgroup" android:text="@string/share_title_wxgroup" android:drawableTop="@drawable/ic_pop_share_wxgroup_normal" style="@style/share_button_style" />
            <TextView android:id="@id/btn_share_qq" android:text="@string/share_title_qq" android:drawableTop="@drawable/ic_pop_share_qq_normal" style="@style/share_button_style" />
            <TextView android:id="@id/btn_share_qzone" android:text="@string/share_title_qzone" android:drawableTop="@drawable/ic_pop_share_qzone_normal" style="@style/share_button_style" />
        </LinearLayout>
        <View android:id="@id/pop_menu_share_bottom" android:layout_width="fill_parent" android:layout_height="@dimen/live_share_menu_margin_bottom" />
    </LinearLayout>
</RelativeLayout>